Added a new explanation text underneath the download button on article page

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -27,6 +27,9 @@ layout: base
     <button class="py-3 px-4 menu-cta-button text-xl tracking-base">
         <a class="no-underline" href="{{ page.download }}">{{ site.language[page.lang].article-download-button-text }}</a>
     </button>
+    <p class="text-grey my-4">
+        {{ site.language[page.lang].article-download-explanation }}
+    </p>
     {% endif %}
 
 </section>
