Align text under download button on pages

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -27,7 +27,7 @@ layout: base
     <button class="py-3 px-4 menu-cta-button text-xl tracking-base">
         <a class="no-underline" href="{{ page.download }}">{{ site.language[page.lang].article-download-button-text }}</a>
     </button>
-    <span class="text-grey px-4">
+    <span class="block md:inline text-grey py-3 md:px-4 md:py-0">
         {{ site.language[page.lang].article-download-explanation }}
     </span>
     {% endif %}
