Update all dependencies, fix aesthetic bugs, introduce new cookie banner, introduce new build scripts

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -24,7 +24,7 @@ layout: base
     {% endif %}
 
     {% if page.download %}
-    <button class="py-3 px-4 menu-cta-button text-xl tracking-base">
+    <button class="py-3 px-4 menu-cta-button text-xl tracking-base leading-none">
         <a class="no-underline" href="{{ page.download }}">{{ site.language[page.lang].article-download-button-text }}</a>
     </button>
     <span class="block md:inline text-grey py-3 md:px-4 md:py-0">
@@ -96,7 +96,7 @@ layout: base
 
 <div class="article-overview {% if darkBackground == 'true' %}dark-background{% endif %}">
     <div class="py-16 max-w-xl px-4 mx-auto">
-        <h2 style="color: rgba(0, 0, 0, .84);">{{ site.language[page.lang].article-related-templates-title }}</h2>
+        <h2 style="color: rgba(0, 0, 0, .84);" class="font-semibold text-2xl">{{ site.language[page.lang].article-related-templates-title }}</h2>
 
         <div class="flex flex-wrap my-4">
 
@@ -132,7 +132,7 @@ layout: base
                             {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
                         {% endif %}
                         <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
-                            <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
+                            <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-200 hover:border-orange">
                                 <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                     <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                 </a>
@@ -183,7 +183,7 @@ layout: base
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
                             {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
-                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
+                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-200 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
@@ -234,7 +234,7 @@ layout: base
                             {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
                         {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
-                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
+                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-200 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
@@ -285,7 +285,7 @@ layout: base
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
                             {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
-                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
+                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-200 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
@@ -336,7 +336,7 @@ layout: base
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
                             {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
-                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
+                                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-200 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
