--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,11 +1,9 @@
 <!doctype html>
-<html lang="{{ page.lang | default: site.lang | default: " en " }}" class="h-full no-js">
+<html lang="{{ page.lang | default: site.lang | default: " en " }}" class="h-full">
 <head>{% include head.html %}</head>
 
 
 <body class="font-sans flex flex-col min-h-full">
-    {% include gtm_body.html %}
-
     <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
