--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -16,9 +16,6 @@ layout: base
         color: #FFFFFF !important;
         display:none;
     }
-    #404-content p {
-        color: #FFFFFF !important;
-    }
 
     body {
         background: #28292c !important;
@@ -95,7 +92,7 @@ layout: base
         <use xlink:href="#symbol-text" class="text"></use>
     </svg>
     <div id="404-content">
-        <p><strong>Page not found :(</strong></p>
-        <p>The requested page could not be found.</p>
+        <p style="color: #FFFFFF !important;"><strong>Page not found :(</strong></p>
+        <p style="color: #FFFFFF !important;">The requested page could not be found.</p>
     </div>
 </div>
