--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-<meta name="theme-color" content="#f68510"/>
+<meta name="theme-color" content="#ffa500"/>
 <meta name="description" content="{{ page.description | default: page.excerpt | default: site.description | first | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
