--- a/resources/sass/_homepage.scss
+++ b/resources/sass/_homepage.scss
@@ -50,7 +50,7 @@
     padding-bottom: 2px;
     color: #000;
     font-weight: 700;
-    border-bottom: 2px solid #f29205;
+    border-bottom: 2px solid #ffa500;
 
     &.black {
       color: black;
@@ -58,18 +58,18 @@
 
     &:hover,
     &:focus {
-      color: #f29205;
+      color: #ffa500;
       transition: all .3s;
 
       i {
-        border-color: #f29205;
+        border-color: #ffa500;
       }
     }
   }
 
   &:hover,
   &:focus {
-    color: #f29205;
+    color: #ffa500;
     border-bottom: 0;
   }
 
@@ -99,7 +99,7 @@
 
 .card-highlight {
   &:hover {
-    border: #f29205 2px solid;
+    border: #ffa500 2px solid;
   }
 }
 
