--- a/resources/sass/_search.scss
+++ b/resources/sass/_search.scss
@@ -1,4 +1,4 @@
-$orange: #f29205;
+$orange: #ffa500;
 $black: #131516;
 $gray: #c4c8d8;
 $gray-dark: #373d3f;
@@ -8,10 +8,10 @@ $gray-dark: #373d3f;
 }
 
 .ais-SearchBox-input {
-  border: 1.5px solid #c4c8d8 !important;
+  border: 1.5px solid $gray !important;
   border-radius: 3px;
   padding: .3rem 1.7rem;
-  --tw-ring-color: #f29205 !important;
+  --tw-ring-color: $orange !important;
 }
 
 .ais-Menu-list {
