--- a/resources/sass/_top_menu.scss
+++ b/resources/sass/_top_menu.scss
@@ -28,7 +28,7 @@
   content: "";
   width: 100%;
   height: 4px;
-  background: orange;
+  background: #ffa500;
   position: absolute;
   left: 0;
   bottom: 0;
@@ -67,7 +67,7 @@
 
   .top-menu-link:hover,
   .top-menu-link.exposed {
-    color: #f68510;
+    color: #ffa500;
     &:after {
       transition: 0.4s ease-in-out;
       transform: rotateY(0deg);
@@ -135,7 +135,7 @@
 }
 
 .menu-cta-button {
-  background: #f29205;
+  background: #ffa500;
 
   &:hover {
     color: #ffffff;
