--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,6 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 <meta name="theme-color" content="#ffa500"/>
-<meta name="description" content="{{ page.description | default: page.excerpt | default: site.description | first | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default,Array.prototype.find,Array.prototype.includes"></script>
@@ -16,5 +15,7 @@
 <link href="{{ '/assets/app.css' | relative_url }}?{{ site.time | date: '%s%N' }}" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
+
+{% seo %}
 
 {% include cookie_alert.html %}
