Next update to image path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,8 +26,8 @@
 
 {% if page.image %}
 <meta name="twitter:card"  content="summary_large_image">
-<meta name="twitter:image" content="{{ site.url }}/{{ page.title }}/{{ page.image }}">
-<meta property="og:image" content="{{ site.url }}/{{ page.title }}/{{ page.image }}">
+<meta name="twitter:image" content="{{ site.url }}/{{ page.ref }}/{{ page.image }}">
+<meta property="og:image" content="{{ site.url }}/{{ page.ref }}/{{ page.image }}">
 {% endif %}
 
 {% seo title=false %}
