Introduce new CTA under every template page

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -360,10 +360,4 @@ layout: base
 </div>
 {% capture darkBackground %}{% if darkBackground == 'true' %}false{% else %}true{% endif %}{% endcapture %}
 
-{% capture cta-setting-dark-background %}{{darkBackground}}{% endcapture %}
-{% capture cta-title %}{{ site.language[page.lang].cta-title }}{% endcapture %}
-{% capture cta-subtitle %}{{ site.language[page.lang].cta-subtitle }}{% endcapture %}
-{% capture cta-content %}{{ site.language[page.lang].cta-content }}{% endcapture %}
-{% capture cta-link %}{{ site.language[page.lang].cta-link }}{% endcapture %}
-{% capture cta-link-text %}{{ site.language[page.lang].cta-link-text }}{% endcapture %}
-{% include cta.html %}
+{% include cta.html lang=site.lang %}
