--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -360,4 +360,4 @@ layout: base
 </div>
 {% capture darkBackground %}{% if darkBackground == 'true' %}false{% else %}true{% endif %}{% endcapture %}
 
-{% include cta.html lang=site.lang %}
+{% include cta.html lang=page.lang %}
