--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -12,7 +12,7 @@
                     <p class="text-center">{{ site.language[include.lang].cta-column-one-text }}</p>
                 </div>
                 <div class="text-center">
-                    <img class="block w-20 mx-auto" src="/assets/images/cta/peakboard-icon-templates.svg" alt="Peakboard Templates icon">
+                    <img class="block w-20 mx-auto" src="/assets/images/cta/peakboard-icon-help.svg" alt="Peakboard Help icon">
                     <a target="_blank" href="{{ site.language[include.lang].cta-column-two-link }}" class="inline-block my-4 border-b-2 border-orange font-semibold text-dark-black hover:text-orange focus:text-orange">
                         <span>{{ site.language[include.lang].cta-column-two-link-text }} <i class="right-arrow"></i></span>
                     </a>
