extensions individual page

--- a/resources/sass/_homepage.scss
+++ b/resources/sass/_homepage.scss
@@ -184,3 +184,14 @@
   height: 1rem;
   background: white;
 }
+
+.right-arrow {
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 3px;
+  margin-left: 3px;
+  margin-bottom: 2px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
