--- a/_layouts/extension.html
+++ b/_layouts/extension.html
@@ -10,7 +10,7 @@ layout: base
             <a class="font-medium" href="{{ site.url }}{% if page.lang == 'en' %}/en/{% endif %}{% if page.lang == 'cn' %}/cn/{% endif %}">< {{ site.language[page.lang].extensions-link-text-return-to-overview }}</a>
         </div>
         <div class="sm:col-span-2 article-content">
-            <img class="lightbox-ignore" src="{{ page.image }}" alt="Peakboard Extension: {{ page.title_text }}">
+            <img class="lightbox-ignore cursor-default" src="{{ page.image }}" alt="Peakboard Extension: {{ page.title_text }}">
             <div>
                 <button class="menu-cta-button block mx-auto my-12 py-3 px-10 tracking-base leading-none text-xl md:text-2xl">
                     <a class="no-underline" href="{{ page.download }}">{{ site.language[page.lang].extensions-link-text-download }}</a>
