--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,10 +7,18 @@ layout: base
 {% include home_hero_banner.html %}
 
 <div class="max-w-3xl px-4 mx-auto my-12">
-    <div class="w-full px-4 sm:w-72 sm:px-0 mb-4 mx-auto">
-        <h2 class="font-extrabold text-4xl mb-2">Extensions<span class="text-orange">.</span></h2>
-        <div id="search-box">
-            <!-- SearchBox -->
+    <div class="flex flex-wrap mb-4">
+        <div class="w-full lg:w-1/4 px-2">
+
+        </div>
+        <div class="w-full lg:w-3/4 px-2">
+            <div class="flex flex-col mb-4">
+                <h2 class="mx-auto font-extrabold text-4xl mb-2" id="header-templates">{{ site.language[page.lang].homepage-top-section-templates }}<span class="text-orange">.</span></h2>
+                <h2 class="mx-auto font-extrabold text-4xl mb-2 hidden" id="header-extensions">{{ site.language[page.lang].homepage-top-section-extensions }}<span class="text-orange">.</span></h2>
+                <div class="mx-auto" id="search-box">
+                    <!-- SearchBox -->
+                </div>
+            </div>
         </div>
     </div>
     <div class="flex flex-wrap mb-4">
@@ -21,9 +29,11 @@ layout: base
             <div id="templates">
                 <!-- Templates -->
             </div>
+            <!-- TODO: remove hidden when launching extensions -->
             <div class="hidden mt-6 mb-2 uppercase text-grey-dark">
                 {{ site.language[page.lang].homepage-menu-title-extensions }}
             </div>
+            <!-- TODO: remove hidden when launching extensions -->
             <div id="extensions" class="hidden">
                 <!-- Extensions -->
             </div>
@@ -56,7 +66,7 @@ layout: base
 
     <script type="text/html" id="no-results-template">
         <div id="no-results-message">
-            <p>{% endraw %}{{ site.language[page.lang].search-no-results }}{% raw %} <em>"{{ query }}"</em>.</p>
+            <p>{% endraw %}{{ site.language[page.lang].search-no-results }}{% raw %}.</p>
         </div>
     </script>
     {% endraw %}
