minor changes to svg and fonts

--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -22,7 +22,7 @@ layout: base
     }
 
     .text {
-        font: 14.5em/1 Open Sans, Impact;
+        font: 14.5em/1 Helvetica Now Text;
         text-transform: uppercase;
         fill: none;
         stroke-width: 4;
