--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
 <head>{% include head.html %}</head>
 
 
-<body class="font-sans flex flex-col min-h-full">
+<body class="font-regular font-sans flex flex-col min-h-full">
     <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
