add text to comnfig

--- a/_includes/home_hero_banner.html
+++ b/_includes/home_hero_banner.html
@@ -41,7 +41,7 @@
 
             <button class="menu-cta-button block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl">
                 <!-- TODO: delete this button and remove hidden from real button below for launch -->
-                <a class="no-underline text-white" href="#">coming soon</a>
+                <a class="no-underline text-white" href="#">{{ site.language[page.lang].homepage-top-section-extensions-button }}</a>
             </button>
 
             <button class="hidden menu-cta-button block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl">
