--- a/_includes/home_hero_banner.html
+++ b/_includes/home_hero_banner.html
@@ -1,4 +1,4 @@
-<section class="py-8 -px-8 page-header-bg">
+<section class="py-8 -px-8 page-header-bg overflow-x-hidden">
     <div class="grid grid-cols-1 sm:grid-cols-3 px-4 sm:px-0">
         <div class="hidden sm:block transform -translate-x-20">
             <img src="/assets/images/homepage/logistics_vector.svg" alt="logistics image" />
