put extensions live

--- a/_includes/home_hero_banner.html
+++ b/_includes/home_hero_banner.html
@@ -15,36 +15,31 @@
 
 <section class="my-8 sm:my-10">
     <div class="w-full sm:w-3/4 grid grid-cols-1 sm:grid-cols-2 px-4 gap-y-8 gap-x-32 sm:mx-auto">
-        <div class="mx-auto text-center flex flex-wrap content-around">
+        <div class="mx-auto text-center flex flex-wrap content-around mt-8 h-full">
             <svg class="mx-auto" width="92" height="67" viewBox="0 0 92 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="92" height="67" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M86 16.5481C86 15.6564 85.2764 14.9336 84.3838 14.9336H7.61616C6.72358 14.9336 6 15.6564 6 16.5481V65.3854C6 66.2771 6.72358 66.9999 7.61616 66.9999H56.101V63.771H9.23232V18.1625H82.7677V63.771H73.0707V66.9999H84.3838C85.2764 66.9999 86 66.2771 86 65.3854V16.5481Z" fill="#FFA500"/><path fill-rule="evenodd" clip-rule="evenodd" d="M31.402 1.6028C31.3956 0.715733 30.6739 0 29.7859 0H7.61616C6.72358 0 6 0.722816 6 1.61446V16.5482H9.23232V3.22892H28.1814L28.2223 8.89118C28.2287 9.77821 28.9503 10.494 29.8384 10.494H82.7677V16.5482H86V8.87953C86 7.98788 85.2764 7.26507 84.3838 7.26507H31.4429L31.402 1.6028Z" fill="#FFA500"/><path fill-rule="evenodd" clip-rule="evenodd" d="M27.9961 29.9526C27.9961 29.0609 28.7197 28.3381 29.6123 28.3381H43.2931C44.1857 28.3381 44.9093 29.0609 44.9093 29.9526V43.619C44.9093 44.5107 44.1857 45.2335 43.2931 45.2335H29.6123C28.7197 45.2335 27.9961 44.5107 27.9961 43.619V29.9526ZM31.2284 31.5671V42.0046H41.6769V31.5671H31.2284Z" fill="#FFA500"/><path fill-rule="evenodd" clip-rule="evenodd" d="M47.6729 24.2734C47.6729 23.3817 48.3964 22.6589 49.289 22.6589H62.9697C63.8623 22.6589 64.5859 23.3817 64.5859 24.2734V37.9398C64.5859 38.8315 63.8623 39.5543 62.9697 39.5543H49.289C48.3964 39.5543 47.6729 38.8315 47.6729 37.9398V24.2734ZM50.9052 25.8879V36.3254H61.3536V25.8879H50.9052Z" fill="#FFA500"/><path fill-rule="evenodd" clip-rule="evenodd" d="M27.9961 43.6467C27.9961 42.755 28.7197 42.0322 29.6123 42.0322H43.2931C44.1857 42.0322 44.9093 42.755 44.9093 43.6467V57.3131C44.9093 58.2048 44.1857 58.9276 43.2931 58.9276H29.6123C28.7197 58.9276 27.9961 58.2048 27.9961 57.3131V43.6467ZM31.2284 45.2611V55.6986H41.6769V45.2611H31.2284Z" fill="#FFA500"/><path fill-rule="evenodd" clip-rule="evenodd" d="M41.7041 43.6467C41.7041 42.755 42.4277 42.0322 43.3203 42.0322H57.0011C57.8937 42.0322 58.6173 42.755 58.6173 43.6467V57.3131C58.6173 58.2048 57.8937 58.9276 57.0011 58.9276H43.3203C42.4277 58.9276 41.7041 58.2048 41.7041 57.3131V43.6467ZM44.9364 45.2611V55.6986H55.3849V45.2611H44.9364Z" fill="#FFA500"/>
             </svg>
 
-            <div>
+            <div class="mt-4">
                 <h2 class="font-extrabold text-4xl mb-2">{{ site.language[page.lang].homepage-top-section-templates }}<span class="text-orange">.</span></h2>
-                <p class="mb-8">{{ site.language[page.lang].homepage-top-section-templates-text }}</p>
+                <p class="mb-4">{{ site.language[page.lang].homepage-top-section-templates-text }}</p>
             </div>
 
             <button class="menu-cta-button block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl">
                 <a class="no-underline text-white" href="?menu%5Bcategory%5D={{ site.language[page.lang].homepage-all-templates }}">{{ site.language[page.lang].homepage-top-section-templates-button }}</a>
             </button>
         </div>
-        <div class="mx-auto text-center flex flex-wrap content-around">
+        <div class="mx-auto text-center flex flex-wrap content-around mt-8 h-full">
             <svg class="mx-auto" width="92" height="67" viewBox="0 0 92 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="92" height="67" fill="white"/><path d="M62.0003 58.1376C57.7631 58.0704 53.7221 56.3281 50.7493 53.2867C47.7766 50.2454 46.1104 46.1487 46.1104 41.881C46.1104 37.6134 47.7766 33.5167 50.7493 30.4753C53.7221 27.434 57.7631 25.6917 62.0003 25.6245C62.4246 25.6245 62.8316 25.7943 63.1316 26.0965C63.4317 26.3986 63.6003 26.8085 63.6003 27.2359V40.2677H76.5444C76.9687 40.2677 77.3756 40.4375 77.6757 40.7396C77.9758 41.0418 78.1443 41.4517 78.1443 41.879C78.1401 46.1898 76.4379 50.3227 73.4112 53.3708C70.3845 56.4189 66.2806 58.1333 62.0003 58.1376ZM60.4003 28.9439C57.9951 29.2454 55.7223 30.221 53.8407 31.7596C51.9591 33.298 50.5442 35.3377 49.7571 37.6462C48.9699 39.9548 48.8421 42.4396 49.3883 44.8176C49.9346 47.1957 51.1328 49.3716 52.8466 51.0976C54.5604 52.8235 56.721 54.0303 59.0823 54.5804C61.4437 55.1304 63.911 55.0018 66.2033 54.209C68.4956 53.4163 70.5209 51.9914 72.0486 50.0964C73.5762 48.2014 74.5449 45.9126 74.8443 43.4904H62.0003C61.5759 43.4904 61.169 43.3206 60.8689 43.0184C60.5688 42.7163 60.4003 42.3064 60.4003 41.879V28.9439Z" fill="#FFA500"/><path d="M81.6005 36.8354H68.7524C68.328 36.8354 67.921 36.6657 67.621 36.3635C67.321 36.0613 67.1523 35.6514 67.1523 35.2241V22.285C67.1523 21.8576 67.321 21.4478 67.621 21.1455C67.921 20.8434 68.328 20.6736 68.7524 20.6736C72.583 20.6779 76.2554 22.2122 78.964 24.9401C81.6726 27.6679 83.1962 31.3664 83.2004 35.2241C83.2004 35.6514 83.0318 36.0613 82.7318 36.3635C82.4318 36.6657 82.0248 36.8354 81.6005 36.8354ZM70.3524 33.6127H79.8884C79.5387 31.1909 78.4215 28.9475 76.7031 27.2171C74.9847 25.4865 72.7573 24.3613 70.3524 24.0091V33.6127Z" fill="#FFA500"/><path d="M32.7996 35.1758H29.5996V55.3176H32.7996V35.1758Z" fill="#FFA500"/><path d="M26.4002 23.4937H23.2002V55.3178H26.4002V23.4937Z" fill="#FFA500"/><path d="M39.2 41.2185H36V55.3178H39.2V41.2185Z" fill="#FFA500"/><path d="M90.4004 12.2141H81.6004V7.78284C81.6004 7.35545 81.4318 6.94557 81.1317 6.64339C80.8317 6.34121 80.4247 6.17144 80.0003 6.17144H74.8003V1.74021C74.8003 1.31292 74.6318 0.903037 74.3317 0.600857C74.0316 0.298677 73.6247 0.128908 73.2003 0.128908L1.65201 0C1.22766 0 0.820696 0.169769 0.520633 0.471949C0.220571 0.774129 0.0520003 1.18401 0.0520003 1.6113L0 53.7063C0 54.1337 0.168571 54.5435 0.468634 54.8457C0.768696 55.1479 1.17566 55.3176 1.60001 55.3176H6.79999V59.3461C6.79999 59.7734 6.96861 60.1832 7.26869 60.4854C7.56877 60.7876 7.97574 60.9574 8.40007 60.9574H13.6001V65.3886C13.6001 65.816 13.7687 66.2258 14.0687 66.528C14.3687 66.8302 14.7757 67 15.2 67H25.9441V63.7773H16.8001V15.4368H88.8004V63.7773H43.2002V67H90.4004C90.8247 67 91.2317 66.8302 91.5319 66.528C91.8323 66.2258 92 65.816 92 65.3886V13.8254C92 13.398 91.8323 12.9882 91.5319 12.686C91.2317 12.3838 90.8247 12.2141 90.4004 12.2141ZM8.45205 6.04253C8.02772 6.04253 7.62075 6.2123 7.32067 6.51448C7.02059 6.81666 6.85206 7.22654 6.85206 7.65393L6.79999 52.0949H3.20001L3.24802 3.22669L71.6004 3.35161V6.17144L8.45205 6.04253ZM15.2 12.2141C14.7757 12.2141 14.3687 12.3838 14.0687 12.686C13.7687 12.9882 13.6001 13.398 13.6001 13.8254V57.7347H10L10.048 9.26932L78.4003 9.39414V12.2141H15.2Z" fill="#FFA500"/>
             </svg>
 
-            <div>
+            <div class="mt-4">
                 <h2 class="font-extrabold text-4xl mb-2">{{ site.language[page.lang].homepage-top-section-extensions }}<span class="text-orange">.</span></h2>
-                <p class="mb-8">{{ site.language[page.lang].homepage-top-section-extensions-text }}</p>
+                <p class="mb-4">{{ site.language[page.lang].homepage-top-section-extensions-text }}</p>
             </div>
 
             <button class="menu-cta-button block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl">
-                <!-- TODO: delete this button and remove hidden from real button below for launch -->
-                <a class="no-underline text-white" href="#">{{ site.language[page.lang].homepage-top-section-extensions-button }}</a>
-            </button>
-
-            <button class="hidden menu-cta-button block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl">
                 <a class="no-underline text-white" href="?menu%5Bextension_category%5D={{ site.language[page.lang].homepage-all-extensions }}">{{ site.language[page.lang].homepage-top-section-extensions-button }}</a>
             </button>
         </div>
