--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,12 +29,10 @@ layout: base
             <div id="templates">
                 <!-- Templates -->
             </div>
-            <!-- TODO: remove hidden when launching extensions -->
-            <div class="hidden mt-6 mb-2 uppercase text-grey-dark">
+            <div class="mt-6 mb-2 uppercase text-grey-dark">
                 {{ site.language[page.lang].homepage-menu-title-extensions }}
             </div>
-            <!-- TODO: remove hidden when launching extensions -->
-            <div id="extensions" class="hidden">
+            <div id="extensions">
                 <!-- Extensions -->
             </div>
             <div id="clear-refinements" class="hidden"></div>
