--- a/_includes/home_hero_banner.html
+++ b/_includes/home_hero_banner.html
@@ -25,9 +25,10 @@
                 <p class="mb-4">{{ site.language[page.lang].homepage-top-section-templates-text }}</p>
             </div>
 
-            <button class="menu-cta-button block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl">
-                <a class="no-underline text-white" href="?menu%5Bcategory%5D={{ site.language[page.lang].homepage-all-templates }}">{{ site.language[page.lang].homepage-top-section-templates-button }}</a>
-            </button>
+            <form action="" class="mx-auto">
+                <input type="hidden" name="menu[category]" value="{{ site.language[page.lang].homepage-all-templates }}" />
+                <input type="submit" value="{{ site.language[page.lang].homepage-top-section-templates-button }}" class="menu-cta-button text-white block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl cursor-pointer" />
+            </form>
         </div>
         <div class="mx-auto text-center flex flex-wrap content-around mt-8 h-full">
             <svg class="mx-auto" width="92" height="67" viewBox="0 0 92 67" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -39,9 +40,10 @@
                 <p class="mb-4">{{ site.language[page.lang].homepage-top-section-extensions-text }}</p>
             </div>
 
-            <button class="menu-cta-button block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl">
-                <a class="no-underline text-white" href="?menu%5Bextension_category%5D={{ site.language[page.lang].homepage-all-extensions }}">{{ site.language[page.lang].homepage-top-section-extensions-button }}</a>
-            </button>
+            <form action="" class="mx-auto">
+                <input type="hidden" name="menu[extension_category]" value="{{ site.language[page.lang].homepage-all-extensions }}" />
+                <input type="submit" value="{{ site.language[page.lang].homepage-top-section-extensions-button }}" class="menu-cta-button text-white block mx-auto my-6 py-3 px-16 tracking-base leading-none text-xl md:text-2xl cursor-pointer" />
+            </form>
         </div>
     </div>
     <div class="mt-4 w-full sm:w-3/4 h-0 border-0.5 border-black mx-auto">
