--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@ layout: base
         </div>
         <div class="w-full lg:w-3/4 px-2">
             <div class="flex flex-col mb-4">
-                <h2 class="mx-auto font-extrabold text-4xl mb-2" id="header-templates">{{ site.language[page.lang].homepage-top-section-templates }}<span class="text-orange">.</span></h2>
-                <h2 class="mx-auto font-extrabold text-4xl mb-2 hidden" id="header-extensions">{{ site.language[page.lang].homepage-top-section-extensions }}<span class="text-orange">.</span></h2>
+                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2" id="header-templates">{{ site.language[page.lang].homepage-top-section-templates }}<span class="text-orange">.</span></h2>
+                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 hidden" id="header-extensions">{{ site.language[page.lang].homepage-top-section-extensions }}<span class="text-orange">.</span></h2>
                 <div class="mx-auto" id="search-box">
                     <!-- SearchBox -->
                 </div>
