--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -166,6 +166,7 @@ html {
     font-size: 2.375rem;
     line-height: 2.875rem;
     font-weight: 600;
+    @apply font-title;
   }
 
   h3,
@@ -173,6 +174,7 @@ html {
     font-size: 2rem;
     line-height: 2.125rem;
     font-weight: 400;
+    @apply font-title;
   }
 
   h4,
@@ -181,6 +183,7 @@ html {
     font-weight: 400;
     text-transform: uppercase;
     color: rgba(0, 0, 0, .84);
+    @apply font-title;
   }
 
   h5,
@@ -189,6 +192,7 @@ html {
     line-height: 1.5rem;
     font-weight: 300;
     border-bottom: 2px solid #f2f3f4;
+    @apply font-title;
   }
 
   h6,
@@ -196,6 +200,7 @@ html {
     font-size: 0.875rem;
     line-height: 1.375rem;
     text-transform: uppercase;
+    @apply font-title;
   }
 
   /* Add margin if adjacent element */
