--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,14 +15,15 @@ layout: base
             <div class="flex flex-col mb-4">
                 <h2 class="font-title mx-auto font-extrabold text-4xl mb-2" id="header-templates">{{ site.language[page.lang].homepage-top-section-templates }}<span class="text-orange">.</span></h2>
                 <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 hidden" id="header-extensions">{{ site.language[page.lang].homepage-top-section-extensions }}<span class="text-orange">.</span></h2>
-                <div class="mx-auto" id="search-box">
-                    <!-- SearchBox -->
-                </div>
+                <h2 class="font-title mx-auto font-extrabold text-4xl mb-2 hidden" id="header-search">{{ site.language[page.lang].homepage-top-section-search }}<span class="text-orange">.</span></h2>
             </div>
         </div>
     </div>
     <div class="flex flex-wrap mb-4">
         <div class="w-full lg:w-1/4 px-2">
+            <div class="mb-8 mx-auto" id="search-box">
+                <!-- SearchBox -->
+            </div>
             <div class="mb-2 uppercase text-grey-dark">
                 {{ site.language[page.lang].homepage-menu-title-templates }}
             </div>
@@ -56,7 +57,10 @@ layout: base
             <a href="{{ url }}">
                 <div>
                     <img alt="{{ title }}" data-src="{{ imageUrl }}" src="/assets/images/blank.png">
-                    <p class="mt-3">{{ title }}</p>
+                    <span class="mt-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium tracking-wide bg-orange-light bg-opacity-20 text-orange">
+                      {{ type }}
+                    </span>
+                    <p class="mt-1">{{ title }}</p>
                 </div>
             </a>
         </div>
