--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -7,7 +7,7 @@ layout: base
 {% assign darkBackground = 'true' %}
 
 <section class="article-content max-w-xl px-4 mx-auto py-8">
-    <a class="font-medium" onclick="history.back(-1)">{{ site.language[page.lang].page-top-overview-text }}</a>
+    <a class="font-medium cursor-pointer" onclick="history.back(-1)">{{ site.language[page.lang].page-top-overview-text }}</a>
     <h1>{{ page.title }}</h1>
     <p class="text-grey mb-4">
         {% for category in page.category %}
