change mechanism of adding orange dots after headlines

--- a/_includes/home_hero_banner.html
+++ b/_includes/home_hero_banner.html
@@ -21,7 +21,7 @@
             </svg>
 
             <div class="mt-4 w-full">
-                <h2 class="font-title font-extrabold text-4xl mb-2">{{ site.language[page.lang].homepage-top-section-templates }}<span class="text-orange">.</span></h2>
+                <h2 class="font-title font-extrabold text-4xl mb-2">{{ site.language[page.lang].homepage-top-section-templates }}</h2>
                 <p class="mb-4">{{ site.language[page.lang].homepage-top-section-templates-text }}</p>
             </div>
 
@@ -36,7 +36,7 @@
             </svg>
 
             <div class="mt-4 w-full">
-                <h2 class="font-title font-extrabold text-4xl mb-2">{{ site.language[page.lang].homepage-top-section-extensions }}<span class="text-orange">.</span></h2>
+                <h2 class="font-title font-extrabold text-4xl mb-2">{{ site.language[page.lang].homepage-top-section-extensions }}</h2>
                 <p class="mb-4">{{ site.language[page.lang].homepage-top-section-extensions-text }}</p>
             </div>
 
